--- a/wwwroot/css/send-to-wallet.css
+++ b/wwwroot/css/send-to-wallet.css
@@ -1,4 +1,16 @@
 
+
+
+.SendWallet-amount {
+    flex: 1;
+    padding: 0.75rem;
+    border: none;
+    outline: none;
+    font-size: 1rem;
+    color: #111827;
+    text-align: right;
+}
+
 .wallet-wrapper {
     display: flex;
     flex-direction: column;
@@ -50,10 +62,10 @@
     flex-wrap: wrap;
 }
 
-    .search-input-group .form-input {
-        flex: 1;
-        min-width: 100px;
-    }
+.search-input-group .form-input {
+    flex: 1;
+    min-width: 100px;
+}
 
 .btn-search {
     white-space: nowrap;
