--- a/Views/TransactionHistory/Index.cshtml
+++ b/Views/TransactionHistory/Index.cshtml
@@ -12,7 +12,7 @@
     <!-- Transaction List -->
     <div class="transaction-content">
         <div class="year-section">
-            <select id="yearSelect" class="year-select">
+            <select id="yearSelect" class="form-select">
                 <option value="2025">2025</option>
                 <option value="2024">2024</option>
                 <option value="2023">2023</option>
